# Podlewanie-ogrodu

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  end.h  kontroler.h  main.cpp  misc.h  podlewanie.h  rzeczy_socketowe.h  simple_gpio_control.h  sterowanie.h  super_kontroler.h  time_funcs.h  wydarzenia.h  zapisywanie.h
